# Miriam_Project

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: SetupDependencies.cmake  SetupDependenciesCMake.cmake
cmake/conan/: conan_support.cmake
source/: main.cpp  main.h  measures.cpp  measures.h
tests/: CMakeLists.txt
