cmake_minimum_required(VERSION 3.15)
project(tests)
file(GLOB TESTS "*.cpp")
if(TESTS)
    foreach (test ${TESTS})
        get_filename_component(test_src ${test} NAME)
        get_filename_component(test_nwe ${test} NAME_WE)
        add_executable(${test_nwe} ${test_src} ${test_inc})
        target_link_libraries(${test_nwe} PRIVATE deps flags)
        add_test(NAME ${test_nwe} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} COMMAND ${test_nwe})
        if (MSVC)
            set_target_properties(${test_nwe} PROPERTIES LINK_FLAGS "/ignore:4099")
        endif()
    endforeach ()
endif()